compiler/tests/compiler/expected/output/SubscriptOperatorNotFoundError.shtk.txt
MODULE SubscriptOperatorNotFoundError.shtk
ERROR in Line 7 Col 14

    println(a["hello"])
             ^
Type error, operator '[' does not exist for ubyte[6] and TestModules/FoobarSubscript.shtk::Foobar

SubscriptOperatorNotFoundError.shtk:7:13
